@@ -5,6 +5,13 @@ describe "Sequel::Model()" do
     @db = Sequel::Model.db
   end
 
+  it "should return a model with a temporary name" do
+    m = Sequel::Model(:blah)
+    m.name.must_equal "Sequel::_Model(:blah)"
+    m.send(:dataset_methods_module).name.must_equal "Sequel::_Model(:blah)::@dataset_methods_module"
+    m.send(:overridable_methods_module).name.must_equal "Sequel::_Model(:blah)::@overridable_methods_module"
+  end if RUBY_VERSION >= '3.3'
+
   it "should return a model subclass with the given dataset if given a dataset" do
     ds = @db[:blah]
     c = Sequel::Model(ds)
